@fix: update global css no scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,16 @@ body,
   @apply dark:bg-black;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+
+
 @layer base {
   :root {
     --background: 0 0% 98%;
